# chaos

./: .gitignore  Cargo.toml  README.md  build.sh
src/: config.rs  data.rs  error.rs  gfx.rs  main.rs  net.rs  ui.rs  window.rs
src/data/: arena.rs  creation.rs  spellbook.rs  spells.rs  stats.rs  wizard.rs
src/gfx/: buffer.rs  color.rs  fx.rs
src/net/: client.rs  error.rs  server.rs
src/net/server/: chaos_server.rs  game_logic.rs  sender.rs  server_state.rs
src/txt/: about.txt
src/ui/: choose_wizard.rs  game.rs  lobby.rs  net.rs
src/ui/game/: client_state.rs  game_ui.rs
