[package]
name = "chaos"
version = "0.0.2-alpha"
edition = "2021"
authors = ["Andy Herbert <andy.herbert@gmail.com>"]
description = "Chaos: The Battle of Wizards"

[dependencies]
bincode = { version = "1.3" }
clap = { version = "4.4", features = ["derive"]}
directories = { version = "5.0" }
lazy_static = { version = "1.4" }
minifb = { version = "0.25" }
rand = { version = "0.8", features = ["std_rng"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }
tokio = { version = "1.15.0", features = ["full"] }
